--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,4 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  padding: 30px;
+  background-color: #242424;
 }
